fix dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@
   font-weight: 400;
   font-size: 16px;
 
-  color-scheme: light dark;
+  color-scheme: light;
   color: #213547;
   background-color: #ffffff;
 
