--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -564,8 +564,28 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.ml-11 {
+  margin-left: 2.75rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
+}
+
+.ml-9 {
+  margin-left: 2.25rem;
+}
+
+.ml-\[26px\] {
+  margin-left: 26px;
+}
+
+.ml-\[46px\] {
+  margin-left: 46px;
 }
 
 .mr-2 {
@@ -582,102 +602,6 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.ml-6 {
-  margin-left: 1.5rem;
-}
-
-.ml-8 {
-  margin-left: 2rem;
-}
-
-.ml-9 {
-  margin-left: 2.25rem;
-}
-
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
-.ml-\[14px\] {
-  margin-left: 14px;
-}
-
-.ml-\[24px\] {
-  margin-left: 24px;
-}
-
-.ml-\[44px\] {
-  margin-left: 44px;
-}
-
-.ml-\[34px\] {
-  margin-left: 34px;
-}
-
-.ml-\[39px\] {
-  margin-left: 39px;
-}
-
-.ml-\[36px\] {
-  margin-left: 36px;
-}
-
-.ml-\[38px\] {
-  margin-left: 38px;
-}
-
-.ml-20 {
-  margin-left: 5rem;
-}
-
-.ml-7 {
-  margin-left: 1.75rem;
-}
-
-.ml-1 {
-  margin-left: 0.25rem;
-}
-
-.ml-11 {
-  margin-left: 2.75rem;
-}
-
-.ml-\[32px\] {
-  margin-left: 32px;
-}
-
-.ml-\[28px\] {
-  margin-left: 28px;
-}
-
-.ml-\[26px\] {
-  margin-left: 26px;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.ml-12 {
-  margin-left: 3rem;
-}
-
-.ml-\[52px\] {
-  margin-left: 52px;
-}
-
-.ml-\[50px\] {
-  margin-left: 50px;
-}
-
-.ml-\[48px\] {
-  margin-left: 48px;
-}
-
-.ml-\[46px\] {
-  margin-left: 46px;
 }
 
 .flex {
@@ -720,24 +644,12 @@ video {
   max-width: 42rem;
 }
 
-.max-w-3xl {
-  max-width: 48rem;
-}
-
 .max-w-5xl {
   max-width: 64rem;
 }
 
 .max-w-7xl {
   max-width: 80rem;
-}
-
-.max-w-xl {
-  max-width: 36rem;
-}
-
-.max-w-md {
-  max-width: 28rem;
 }
 
 .max-w-lg {
@@ -833,14 +745,6 @@ video {
   padding-bottom: 1rem;
 }
 
-.pb-8 {
-  padding-bottom: 2rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
 .pl-5 {
   padding-left: 1.25rem;
 }
@@ -857,24 +761,12 @@ video {
   padding-top: 1.5rem;
 }
 
-.pr-6 {
-  padding-right: 1.5rem;
-}
-
-.pr-12 {
-  padding-right: 3rem;
-}
-
 .text-left {
   text-align: left;
 }
 
 .text-center {
   text-align: center;
-}
-
-.align-middle {
-  vertical-align: middle;
 }
 
 .text-2xl {
@@ -935,7 +827,7 @@ video {
   line-height: 1.5;
   font-weight: 400;
   font-size: 16px;
-  color-scheme: light dark;
+  color-scheme: light;
   color: #213547;
   background-color: #ffffff;
   font-synthesis: none;
@@ -988,19 +880,19 @@ a {
     flex-direction: row;
   }
 
-  .lg\:pt-12 {
-    padding-top: 3rem;
-  }
-
-  .lg\:pr-12 {
-    padding-right: 3rem;
+  .lg\:pb-0 {
+    padding-bottom: 0px;
   }
 
   .lg\:pb-8 {
     padding-bottom: 2rem;
   }
 
-  .lg\:pb-0 {
-    padding-bottom: 0px;
+  .lg\:pr-12 {
+    padding-right: 3rem;
+  }
+
+  .lg\:pt-12 {
+    padding-top: 3rem;
   }
 }
